[metadata]
name = evmosgrpc
version = 1.0.3
description = Evmos grpc messages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hanchon-live/evmosgrpc
author = Hanchon
author_email = guillermo.paoletti@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    evmosproto==1.0.2
    evmoswallet==1.0.4
python_requires = >=3.6

[autopep8]
max_line_length = 120

[flake8]
max_line_length = 120

[yapf]
column_limit = 120
based_on_style = pep8
